# vidwiz

./: README.md  pyproject.toml
vidwiz/: videoreader.py
